Fixed svg size on firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, body { margin:0; padding:0; overflow:hidden }
 
 body {
-     background-image: url("../img/parchment-background.jpg");
+  background-image: url("../img/parchment-background.jpg");
 }
 
 text, p, div {
@@ -27,6 +27,14 @@ text, p, div {
 #family_tree {
   width: 100%;
   height: auto;
+}
+
+#svgtree {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
 }
 
 #overlay {
